--- a/index.html
+++ b/index.html
@@ -344,7 +344,8 @@
 					<div class="widget-title">プロフィール</div>
 
 					<div class="wprofile">
-						<div class="wprofile-img"><img src="./img/profile.png" alt=""></div>
+						<div class="wprofile-img"><img src="<?php echo get_template_directory_uri() ?>/img/profile.png" alt="">
+						</div>
 						<div class="wprofile-content">
 							<p>
 								テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
@@ -382,7 +383,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry2.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry2.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -390,7 +392,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry1.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry1.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -398,7 +401,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry3.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry3.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -406,7 +410,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry4.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry4.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -414,7 +419,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry5.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry5.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -433,7 +439,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry7.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry7.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -441,7 +448,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry6.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry6.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -449,7 +457,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry10.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry10.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -457,7 +466,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry7.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry7.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -465,7 +475,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry9.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry9.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -530,16 +541,19 @@
 			<nav class="footer-sns-buttons">
 				<ul>
 					<li><a class="m_twitter" href="https://twitter.com/share?url=https://example.com/&text=blog title"
-							rel="nofollow" target="_blank"><img src="./img/icon-twitter.png" alt=""></a></li>
+							rel="nofollow" target="_blank"><img src="<?php echo get_template_directory_uri() ?>/img/icon-twitter.png"
+								alt=""></a></li>
 					<li><a class="m_facebook" href="https://www.facebook.com/share.php?u=https://example.com/" rel="nofollow"
-							target="_blank"><img src="./img/icon-facebook.png" alt=""></a></li>
+							target="_blank"><img src="<?php echo get_template_directory_uri() ?>/img/icon-facebook.png" alt=""></a>
+					</li>
 					<li><a class="m_hatena"
 							href="https://b.hatena.ne.jp/add?mode=confirm&url=https://example.com/&title=blog title" rel="nofollow"
-							target="_blank"><img src="./img/icon-hatena.png" alt=""></a></li>
+							target="_blank"><img src="<?php echo get_template_directory_uri() ?>/img/icon-hatena.png" alt=""></a></li>
 					<li><a class="m_line" href="https://social-plugins.line.me/lineit/share?url=https://example.com/"
-							rel="nofollow" target="_blank"><img src="./img/icon-line.png" alt=""></a></li>
+							rel="nofollow" target="_blank"><img src="<?php echo get_template_directory_uri() ?>/img/icon-line.png"
+								alt=""></a></li>
 					<li><a class="m_pocket" href="https://getpocket.com/edit?url=https://example.com/" rel="nofollow"
-							target="_blank"><img src="./img/icon-pocket.png" alt=""></a></li>
+							target="_blank"><img src="<?php echo get_template_directory_uri() ?>/img/icon-pocket.png" alt=""></a></li>
 				</ul>
 			</nav><!-- /footer-sns-buttons -->
 
