--- a/category.html
+++ b/category.html
@@ -325,7 +325,8 @@
 					<div class="widget-title">プロフィール</div>
 
 					<div class="wprofile">
-						<div class="wprofile-img"><img src="./img/profile.png" alt=""></div>
+						<div class="wprofile-img"><img src="<?php echo get_template_directory_uri() ?>/img/profile.png" alt="">
+						</div>
 						<div class="wprofile-content">
 							<p>
 								テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
@@ -363,7 +364,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry2.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry2.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -371,7 +373,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry1.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry1.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -379,7 +382,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry3.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry3.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -387,7 +391,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry4.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry4.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -395,7 +400,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry5.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry5.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -414,7 +420,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry7.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry7.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -422,7 +429,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry6.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry6.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -430,7 +438,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry10.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry10.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -438,7 +447,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry7.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry7.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -446,7 +456,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry9.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry9.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -511,16 +522,20 @@
 			<nav class="footer-sns-buttons">
 				<ul>
 					<li><a class="m_twitter" href="https://twitter.com/share?url=https://example.com/category/a/&text=カテゴリー名"
-							rel="nofollow" target="_blank"><img src="./img/icon-twitter.png" alt=""></a></li>
+							rel="nofollow" target="_blank"><img src="<?php echo get_template_directory_uri() ?>/img/icon-twitter.png"
+								alt=""></a></li>
 					<li><a class="m_facebook" href="https://www.facebook.com/share.php?u=https://example.com/category/a/"
-							rel="nofollow" target="_blank"><img src="./img/icon-facebook.png" alt=""></a></li>
+							rel="nofollow" target="_blank"><img src="<?php echo get_template_directory_uri() ?>/img/icon-facebook.png"
+								alt=""></a></li>
 					<li><a class="m_hatena"
 							href="https://b.hatena.ne.jp/add?mode=confirm&url=https://example.com/category/a/&title=カテゴリー名"
-							rel="nofollow" target="_blank"><img src="./img/icon-hatena.png" alt=""></a></li>
+							rel="nofollow" target="_blank"><img src="<?php echo get_template_directory_uri() ?>/img/icon-hatena.png"
+								alt=""></a></li>
 					<li><a class="m_line" href="https://social-plugins.line.me/lineit/share?url=https://example.com/category/a/"
-							rel="nofollow" target="_blank"><img src="./img/icon-line.png" alt=""></a></li>
+							rel="nofollow" target="_blank"><img src="<?php echo get_template_directory_uri() ?>/img/icon-line.png"
+								alt=""></a></li>
 					<li><a class="m_pocket" href="https://getpocket.com/edit?url=https://example.com/category/a/" rel="nofollow"
-							target="_blank"><img src="./img/icon-pocket.png" alt=""></a></li>
+							target="_blank"><img src="<?php echo get_template_directory_uri() ?>/img/icon-pocket.png" alt=""></a></li>
 				</ul>
 			</nav><!-- /footer-sns-buttons -->
 
