--- a/page.html
+++ b/page.html
@@ -134,7 +134,8 @@
 					<div class="widget-title">プロフィール</div>
 
 					<div class="wprofile">
-						<div class="wprofile-img"><img src="./img/profile.png" alt=""></div>
+						<div class="wprofile-img"><img src="<?php echo get_template_directory_uri() ?>/img/profile.png" alt="">
+						</div>
 						<div class="wprofile-content">
 							<p>
 								テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
@@ -172,7 +173,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry2.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry2.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -180,7 +182,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry1.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry1.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -188,7 +191,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry3.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry3.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -196,7 +200,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry4.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry4.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -204,7 +209,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry5.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry5.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -223,7 +229,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry7.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry7.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -231,7 +238,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry6.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry6.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -239,7 +247,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry10.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry10.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -247,7 +256,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry7.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry7.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -255,7 +265,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry9.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry9.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -321,16 +332,20 @@
 				<ul>
 					<li><a class="m_twitter"
 							href="https://twitter.com/share?url=https://example.com/pagetitle/&text=固定ページのタイトルが入ります" rel="nofollow"
-							target="_blank"><img src="./img/icon-twitter.png" alt=""></a></li>
+							target="_blank"><img src="<?php echo get_template_directory_uri() ?>/img/icon-twitter.png" alt=""></a>
+					</li>
 					<li><a class="m_facebook" href="https://www.facebook.com/share.php?u=https://example.com/pagetitle/"
-							rel="nofollow" target="_blank"><img src="./img/icon-facebook.png" alt=""></a></li>
+							rel="nofollow" target="_blank"><img src="<?php echo get_template_directory_uri() ?>/img/icon-facebook.png"
+								alt=""></a></li>
 					<li><a class="m_hatena"
 							href="https://b.hatena.ne.jp/add?mode=confirm&url=https://example.com/pagetitle/&title=固定ページのタイトルが入ります"
-							rel="nofollow" target="_blank"><img src="./img/icon-hatena.png" alt=""></a></li>
+							rel="nofollow" target="_blank"><img src="<?php echo get_template_directory_uri() ?>/img/icon-hatena.png"
+								alt=""></a></li>
 					<li><a class="m_line" href="https://social-plugins.line.me/lineit/share?url=https://example.com/pagetitle/"
-							rel="nofollow" target="_blank"><img src="./img/icon-line.png" alt=""></a></li>
+							rel="nofollow" target="_blank"><img src="<?php echo get_template_directory_uri() ?>/img/icon-line.png"
+								alt=""></a></li>
 					<li><a class="m_pocket" href="https://getpocket.com/edit?url=https://example.com/pagetitle/" rel="nofollow"
-							target="_blank"><img src="./img/icon-pocket.png" alt=""></a></li>
+							target="_blank"><img src="<?php echo get_template_directory_uri() ?>/img/icon-pocket.png" alt=""></a></li>
 				</ul>
 			</nav><!-- /footer-sns-buttons -->
 
