--- a/search.html
+++ b/search.html
@@ -317,7 +317,8 @@
 					<div class="widget-title">プロフィール</div>
 
 					<div class="wprofile">
-						<div class="wprofile-img"><img src="./img/profile.png" alt=""></div>
+						<div class="wprofile-img"><img src="<?php echo get_template_directory_uri() ?>/img/profile.png" alt="">
+						</div>
 						<div class="wprofile-content">
 							<p>
 								テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
@@ -355,7 +356,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry2.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry2.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -363,7 +365,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry1.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry1.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -371,7 +374,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry3.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry3.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -379,7 +383,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry4.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry4.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -387,7 +392,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry5.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry5.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -406,7 +412,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry7.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry7.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -414,7 +421,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry6.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry6.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -422,7 +430,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry10.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry10.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -430,7 +439,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry7.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry7.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -438,7 +448,8 @@
 
 						<!-- wpost-item -->
 						<a class="wpost-item" href="#">
-							<div class="wpost-item-img"><img src="./img/entry9.png" alt=""></div>
+							<div class="wpost-item-img"><img src="<?php echo get_template_directory_uri() ?>/img/entry9.png" alt="">
+							</div>
 							<div class="wpost-item-body">
 								<div class="wpost-item-title">記事のタイトルが入ります記事のタイトルが入ります記事のタイトルが入ります</div>
 							</div><!-- /wpost-item-body -->
@@ -503,16 +514,20 @@
 			<nav class="footer-sns-buttons">
 				<ul>
 					<li><a class="m_twitter" href="https://twitter.com/share?url=https://example.com/search/a/&text=「タイトル」の検索結果"
-							rel="nofollow" target="_blank"><img src="./img/icon-twitter.png" alt=""></a></li>
+							rel="nofollow" target="_blank"><img src="<?php echo get_template_directory_uri() ?>/img/icon-twitter.png"
+								alt=""></a></li>
 					<li><a class="m_facebook" href="https://www.facebook.com/share.php?u=https://example.com/search/a/"
-							rel="nofollow" target="_blank"><img src="./img/icon-facebook.png" alt=""></a></li>
+							rel="nofollow" target="_blank"><img src="<?php echo get_template_directory_uri() ?>/img/icon-facebook.png"
+								alt=""></a></li>
 					<li><a class="m_hatena"
 							href="https://b.hatena.ne.jp/add?mode=confirm&url=https://example.com/search/a/&title=「タイトル」の検索結果"
-							rel="nofollow" target="_blank"><img src="./img/icon-hatena.png" alt=""></a></li>
+							rel="nofollow" target="_blank"><img src="<?php echo get_template_directory_uri() ?>/img/icon-hatena.png"
+								alt=""></a></li>
 					<li><a class="m_line" href="https://social-plugins.line.me/lineit/share?url=https://example.com/search/a/"
-							rel="nofollow" target="_blank"><img src="./img/icon-line.png" alt=""></a></li>
+							rel="nofollow" target="_blank"><img src="<?php echo get_template_directory_uri() ?>/img/icon-line.png"
+								alt=""></a></li>
 					<li><a class="m_pocket" href="https://getpocket.com/edit?url=https://example.com/search/a/" rel="nofollow"
-							target="_blank"><img src="./img/icon-pocket.png" alt=""></a></li>
+							target="_blank"><img src="<?php echo get_template_directory_uri() ?>/img/icon-pocket.png" alt=""></a></li>
 				</ul>
 			</nav><!-- /footer-sns-buttons -->
 
